--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
   </head>
 
   <body>
+    <div class="container">
+      <h1>COLORS</h1>
+      <div class="red white-text">Div with color class</div>
+      <div class="blue white-text darken-2">Div with color class</div>
+      <div class="deep-purple lighten-3 blue-text">Div with color class</div>
+
+      
+    </div>
     <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
