covered basic button concepts

--- a/index.html
+++ b/index.html
@@ -24,7 +24,22 @@
       <div class="blue white-text darken-2">Div with color class</div>
       <div class="deep-purple lighten-3 blue-text">Div with color class</div>
 
-      
+      <h1>BUTTONS</h1>
+      <button class="btn">Read More</button>
+      <button class="btn waves-effect waves-light">Read More</button>
+      <button class="btn-large">Read More</button>
+      <button class="btn disabled">Read More</button>
+      <button class="btn-large red darken-3">Read More</button>
+      <button class="btn-large blue">Read More</button>
+      <button class="btn-large green">Read More</button>
+      <button class="btn-large purple lighten-2">Read More</button>
+      <button class="btn-large black">Read More</button>
+      <button class="btn-large black yellow">Read More</button>
+      <button class="btn-large brown">
+        <i class="material-icons left">cloud</i> Read More
+      </button>
+
+      <!-- closing div -->
     </div>
     <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
