--- a/index.html
+++ b/index.html
@@ -39,9 +39,55 @@
         <i class="material-icons left">cloud</i> Read More
       </button>
 
+      <!-- floating button -->
+      <a href="#" class="btn-floating red btn-large"
+        ><i class="large material-icons">add</i></a
+      >
+
+      <!-- fixed action button -->
+      <div class="fixed-action-btn">
+        <a class="btn-floating btn-large red">
+          <i class="large material-icons">mode_edit</i>
+        </a>
+        <ul>
+          <li>
+            <a class="btn-floating red"
+              ><i class="material-icons">insert_chart</i></a
+            >
+          </li>
+          <li>
+            <a class="btn-floating yellow darken-1"
+              ><i class="material-icons">format_quote</i></a
+            >
+          </li>
+          <li>
+            <a class="btn-floating green"
+              ><i class="material-icons">publish</i></a
+            >
+          </li>
+          <li>
+            <a class="btn-floating blue"
+              ><i class="material-icons">attach_file</i></a
+            >
+          </li>
+        </ul>
+      </div>
+
       <!-- closing div -->
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        var elems = document.querySelectorAll(".fixed-action-btn");
+        var instances = M.FloatingActionButton.init(elems, options);
+      });
+
+      $(document).ready(function () {
+        $(".fixed-action-btn").floatingActionButton();
+      });
+    </script>
   </body>
 </html>
