--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
         </ul>
       </div>
 
+      <!-- flat button -->
+      <a href="#" class="waves-effect waves-teal btn-flat">Button</a>
+
+      
+
       <!-- closing div -->
     </div>
 
