--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <div class="red white-text">Div with color class</div>
       <div class="blue white-text darken-2">Div with color class</div>
       <div class="deep-purple lighten-3 blue-text">Div with color class</div>
-
+      <br />
+      <hr />
       <h1>BUTTONS</h1>
       <button class="btn">Read More</button>
       <button class="btn waves-effect waves-light">Read More</button>
@@ -75,11 +76,61 @@
 
       <!-- flat button -->
       <a href="#" class="waves-effect waves-teal btn-flat">Button</a>
+      <br />
+      <hr />
+      <h1>HELPERS</h1>
 
-      
+      <!-- ALIGNMENT CLASSES -->
+      <h5 class="left-align">This Aligns to the left</h5>
+      <h5 class="right-align">This Aligns to the right</h5>
+      <h5 class="center-align">This Aligns to the center</h5>
+      <hr />
+      <!-- quick floats -->
+      <div class="left">Left Float</div>
+      <div class="right">Right Float</div>
+
+      <!-- clear -->
+      <div class="clearfix"></div>
+      <hr />
+      <!-- hide content -->
+      <div class="hide">Hidden for all devices</div>
+      <div class="hide-on-small-only">Hidden for mobile devices</div>
+      <div class="hide-on-med-only">Hidden for tablets devices</div>
+      <div class="hide-on-med-and-down">Hidden for tablets and smaller</div>
+      <div class="hide-on-med-and-up">Hidden for tablets and higher</div>
+      <div class="hide-on-large-only">Hidden for desktops</div>
+      <!-- truncate -->
+      <h4 class="truncate">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem
+        quibusdam expedita cum aspernatur porro corrupti nihil, blanditiis
+        molestiae esse, quos labore autem, ratione excepturi.
+      </h4>
+      <!-- effects -->
+
+      <!-- hoverable -->
+      <div class="red white-text hoverable">Hoverable content</div>
+      <!-- pulse -->
+      <div class="blue white-text pulse">Pulse content</div>
+
+      <!-- shadows -->
+      <p class="z-depth-1">z-depth-1</p>
+      <p class="z-depth-2 red">z-depth-2</p>
+      <p class="z-depth-3">z-depth-3</p>
+      <p class="z-depth-4">z-depth-4</p>
+      <p class="z-depth-5">z-depth-5</p>
+
+      <!-- flow text -->
+      <p class="flow-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum optio
+        veritatis minima, dignissimos labore sed fuga vero explicabo voluptas
+        quis ipsam molestiae aut ad quos repellendus porro cumque qui delectus!
+      </p>
+
+      <hr />
 
       <!-- closing div -->
     </div>
+    <div style="height: 500px"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!--JavaScript at end of body for optimized loading-->
