covered some helper classes for images.

--- a/index.html
+++ b/index.html
@@ -126,6 +126,19 @@
         quis ipsam molestiae aut ad quos repellendus porro cumque qui delectus!
       </p>
 
+      <!-- images -->
+      <img
+        class="responsive-img"
+        src="http://imgsv.imaging.nikon.com/lineup/lens/zoom/normalzoom/af-s_dx_18-140mmf_35-56g_ed_vr/img/sample/sample1_l.jpg"
+        alt=""
+      />
+
+      <img
+        class="responsive-img circle"
+        src="http://imgsv.imaging.nikon.com/lineup/lens/zoom/normalzoom/af-s_dx_18-140mmf_35-56g_ed_vr/img/sample/sample1_l.jpg"
+        alt=""
+      />
+
       <hr />
 
       <!-- closing div -->
