--- a/index.html
+++ b/index.html
@@ -143,6 +143,69 @@
 
       <!-- closing div -->
     </div>
+
+    <!-- navigation -->
+    <h1>NAVIGATION</h1>
+    <nav>
+      <div class="nav-wrapper blue">
+        <a href="#" class="brand-logo">Logo</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <br /><br />
+
+    <nav>
+      <div class="nav-wrapper red">
+        <a href="#" class="brand-logo right">Logo</a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <br /><br />
+
+    <!-- center logo -->
+    <nav>
+      <div class="nav-wrapper green">
+        <a href="#" class="brand-logo center">Logo</a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <br /><br />
+
+    <!-- icons & buttons in nav -->
+    <nav>
+      <div class="nav-wrapper black">
+        <a href="#" class="brand-logo right">Logo</a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li>
+            <a href="#"><i class="material-icons">search</i></a>
+          </li>
+          <li>
+            <a href="#"
+              ><i class="material-icons left">refresh</i>Link with Left Icon</a
+            >
+          </li>
+          <li><a class="waves-effect waves-light btn">Button</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <br /><br />
+
     <div style="height: 500px"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
