--- a/index.html
+++ b/index.html
@@ -206,6 +206,23 @@
 
     <br /><br />
 
+    <!-- searchbar -->
+    <h1>SEARCHBAR</h1>
+    <nav>
+      <div class="nav-wrapper">
+        <form>
+          <div class="input-field">
+            <input type="search" id="search" required />
+            <label for="search" class="label-icon"
+              ><i class="material-icons">search</i></label
+            >
+          </div>
+        </form>
+      </div>
+    </nav>
+
+    <br /><br />
+
     <div style="height: 500px"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -220,6 +237,8 @@
       $(document).ready(function () {
         $(".fixed-action-btn").floatingActionButton();
       });
+
+      $(".button-collapse").sideNav();
     </script>
   </body>
 </html>
