--- a/index.html
+++ b/index.html
@@ -223,6 +223,75 @@
 
     <br /><br />
 
+    <div class="container">
+      <h1>COLLECTIONS/LIST</h1>
+      <!-- collection list -->
+
+      <ul class="collection">
+        <li class="collection-item">Item 1</li>
+        <li class="collection-item">Item 2</li>
+        <li class="collection-item">Item 3</li>
+        <li class="collection-item">Item 4</li>
+      </ul>
+
+      <!-- links collection -->
+      <div class="collection">
+        <a href="#" class="collection-item">Link 1</a>
+        <a href="#" class="collection-item">Link 2</a>
+        <a href="#" class="collection-item">Link 3</a>
+        <a href="#" class="collection-item">Link 4</a>
+      </div>
+
+      <!-- with header -->
+      <ul class="collection with-header">
+        <li class="collection-item"><h4>Header</h4></li>
+        <li class="collection-item">Item 1</li>
+        <li class="collection-item">Item 2</li>
+        <li class="collection-item">Item 3</li>
+        <li class="collection-item">Item 4</li>
+      </ul>
+
+      <!-- icon list -->
+      <h1>ICON COLLECTION</h1>
+      <ul class="collection">
+        <li class="collection-item avatar">
+          <i class="material-icons circle">folder</i>
+          <span class="title">Title</span>
+          <p>
+            First Line <br />
+            Second Line
+          </p>
+          <a href="#!" class="secondary-content"
+            ><i class="material-icons">grade</i></a
+          >
+        </li>
+        <li class="collection-item avatar">
+          <i class="material-icons circle green">insert_chart</i>
+          <span class="title">Title</span>
+          <p>
+            First Line <br />
+            Second Line
+          </p>
+          <a href="#!" class="secondary-content"
+            ><i class="material-icons">grade</i></a
+          >
+        </li>
+        <li class="collection-item avatar">
+          <i class="material-icons circle red">play_arrow</i>
+          <span class="title">Title</span>
+          <p>
+            First Line <br />
+            Second Line
+          </p>
+          <a href="#!" class="secondary-content"
+            ><i class="material-icons">grade</i></a
+          >
+        </li>
+      </ul>
+
+      <!-- end of container  -->
+    </div>
+
     <div style="height: 500px"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -237,8 +306,6 @@
       $(document).ready(function () {
         $(".fixed-action-btn").floatingActionButton();
       });
-
-      $(".button-collapse").sideNav();
     </script>
   </body>
 </html>
