--- a/index.html
+++ b/index.html
@@ -305,6 +305,41 @@
           <a href=""><i class="material-icons">chevron_right</i></a>
         </li>
       </ul>
+      <hr />
+      <!-- breadcrumbs -->
+      <h1>BREADCRUMBS</h1>
+      <nav>
+        <div class="nav-wrapper">
+          <div class="col s12">
+            <a href="#" class="breadcrumb">First</a>
+            <a href="#" class="breadcrumb">Second</a>
+            <a href="#" class="breadcrumb">Third</a>
+          </div>
+        </div>
+      </nav>
+
+      <h1>CARDS</h1>
+      <!-- cards -->
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">Card Title</span
+          ><a class="btn-floating halfway-fab waves-effect waves-light red">
+            <i class="material-icons">add</i>
+          </a>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
+            soluta dolores, rerum suscipit fugiat quibusdam exercitationem unde
+            ratione! Deleniti ab maiores corrupti beatae reiciendis iure aperiam
+            error, aut sint cumque.
+          </p>
+        </div>
+        <div class="card-action">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+        </div>
+      </div>
+
+      
 
       <!-- end of container  -->
     </div>
