created a basic image card.  looks really cool!

--- a/index.html
+++ b/index.html
@@ -339,7 +339,24 @@
         </div>
       </div>
 
-      
+      <h1>IMAGE CARD</h1>
+      <div class="card small">
+        <div class="card-image">
+          <img src="http://materializecss.com/images/sample-1.jpg" />
+          <span class="card-title">Card Title</span>
+        </div>
+        <div class="card-content">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, in
+            sapiente distinctio ipsam incidunt culpa animi tenetur veniam,
+            corporis voluptas iure hic sequi amet quas dignissimos voluptatem,
+            blanditiis eius vitae.
+          </p>
+        </div>
+        <div class="card-action">
+          <a href="#">This is a link</a>
+        </div>
+      </div>
 
       <!-- end of container  -->
     </div>
