created a horizontal card

--- a/index.html
+++ b/index.html
@@ -358,6 +358,25 @@
         </div>
       </div>
 
+      <!-- horizontal cards -->
+      <h2 class="header">Horizontal Card</h2>
+      <div class="card horizontal">
+        <div class="card-image">
+          <img src="http://lorempixel.com/100/190/nature/6" />
+        </div>
+        <div class="card-stacked">
+          <div class="card-content">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+              amet labore aperiam quod dignissimos fuga!
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="#">This is a link</a>
+          </div>
+        </div>
+      </div>
+
       <!-- end of container  -->
     </div>
 
