implemented a simple card panel which is similar to a well in boostreap

--- a/index.html
+++ b/index.html
@@ -377,6 +377,17 @@
         </div>
       </div>
 
+      <!-- card panel -->
+      <h1>CARD PANEL</h1>
+      <div class="card-panel teal">
+        <span class="white-text"
+          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorem
+          quia dicta quaerat illo, accusamus fuga quis totam officia esse!
+        </span>
+      </div>
+
+      
+
       <!-- end of container  -->
     </div>
 
