covered the simple construction of chips

--- a/index.html
+++ b/index.html
@@ -386,7 +386,10 @@
         </span>
       </div>
 
-      
+      <!-- chips -->
+      <h1>CHIPS</h1>
+      <div class="chip">Tag 1 <i class="close material-icons">close</i></div>
+      <div class="chip">Tag 2 <i class="close material-icons">close</i></div>
 
       <!-- end of container  -->
     </div>
