implemented as basic form and studied its use

--- a/index.html
+++ b/index.html
@@ -391,6 +391,27 @@
       <div class="chip">Tag 1 <i class="close material-icons">close</i></div>
       <div class="chip">Tag 2 <i class="close material-icons">close</i></div>
 
+      <!-- forms -->
+      <h1>FORMS</h1>
+      <form>
+        <div class="input-field">
+          <input type="text" id="name" />
+          <label for="" class="active">Name</label>
+        </div>
+        <div class="input-field">
+          <input type="email" id="textarea" class="validate" />
+          <label for="email" class="active">Email</label>
+        </div>
+        <div class="input-field">
+          <textarea
+            type="email"
+            id="textarea"
+            class="materialize-textarea"
+          ></textarea>
+          <label for="textarea" class="active">Textarea</label>
+        </div>
+      </form>
+
       <!-- end of container  -->
     </div>
 
