implemented preloaders and circular preloaders

--- a/index.html
+++ b/index.html
@@ -412,6 +412,30 @@
         </div>
       </form>
 
+      <h1>PRELOADERS</h1>
+      <!-- preloaders -->
+      <div class="progress">
+        <div class="determinate" style="width: 70%"></div>
+      </div>
+      <div class="progress">
+        <div class="indeterminate"></div>
+      </div>
+
+      <!-- circular -->
+      <div class="preloader-wrapper big active">
+        <div class="spinner-layer spinner-blue-only">
+          <div class="circle-clipper left">
+            <div class="circle"></div>
+          </div>
+          <div class="gap-patch">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-clipper right">
+            <div class="circle"></div>
+          </div>
+        </div>
+      </div>
+
       <!-- end of container  -->
     </div>
 
